--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "prestart": "tsc -p .",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "jest"
   },
   "name": "Vax",
   "version": "1.0.0",
@@ -11,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
@@ -21,12 +23,16 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.2",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.3.0",
+    "jest": "^27.0.6",
     "koa-router": "^10.0.0",
+    "ts-jest": "^27.0.4",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   }
