--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "prestart": "tsc -p .",
     "start": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
-  "name": "Vax",
+  "name": "vax",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Jo1ceLi",
@@ -22,6 +22,7 @@
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
+    "@shopify/jest-koa-mocks": "^3.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
