--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "jest --detectOpenHandles"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "name": "vax",
   "version": "1.0.0",
   "main": "index.js",
