--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/koa-router": "^7.4.4",
     "@types/node": "^16.3.0",
     "jest": "^27.0.6",
+    "jest-mock-extended": "^1.0.18",
     "koa-router": "^10.0.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.0.0",
